# openntpd-portable

./: .gitignore  .travis.yml  COPYING  ChangeLog  INSTALL  Makefile.am  README  README.md  VERSION  autogen.sh  bsd-adjfreq.c  client.patch  config.patch  configure.ac  dist.sh  fake-sensors.c  ntp.patch  ntpd.conf  ntpd.patch  parse.patch  update.sh
.github/workflows/: test.yml
compat/: Makefile.am  adjfreq_freebsd.c  adjfreq_linux.c  adjfreq_netbsd.c  adjfreq_osx.c  adjfreq_solaris.c  arc4random.h  bsd-setresgid.c  mach-clock_gettime.c  setproctitle.c  socket.c
include/: Makefile.am  err.h  md5.h  sha2.h  signal.h  stdlib.h  string.h  tls.h  unistd.h
include/arpa/: nameser.h
include/machine/: endian.h
include/netinet/: in.h
include/sys/: cdefs.h  socket.h  time.h  types.h
m4/: check-libc-compat.m4  check-os-options.m4
patches/: 0001-Handle-IPv6-DNS-records-on-IPv4-networks-more-libera.patch  0001-be-more-verbose-when-logging-privsep-errors.patch  0001-include-time.h-for-clock_gettime.patch  0001-include-time.h-for-strftime-clock_gettime.patch  0001-make-fatal-fatalx-variadic-like-the-other-logging-fu.patch  0002-EAI_NODATA-does-not-exist-everywhere.patch  0002-be-more-verbose-when-logging-privsep-errors.patch  0002-do-not-allow-privsep-user-to-be-a-privileged-user.patch  0002-removed-unused-libevent-header-and-structures-in-ntp.patch  0002-removed-unused-libevent-header-and-structures.patch  0003-Handle-IPv6-DNS-records-on-IPv4-networks-more-libera.patch  0003-Use-LOG_NTP-syslog-facility-if-it-is-available.patch  0003-Use-LOG_NTP-syslog-facility.patch  0003-conditionally-fill-in-sin_len-sin6_len-if-they-exist.patch  0003-do-not-allow-privsep-user-to-be-a-privileged-user.patch  0003-remove-unused-dns_pid.patch  0004-EAI_NODATA-does-not-exist-everywhere.patch  0004-Fix-DNS-timeout-lookup.patch  0004-Handle-IPv6-DNS-records-on-IPv4-networks-more-libera.patch  0004-add-MAX-macro-used-in-a-few-places-in-ntpd.patch  0004-add-MAX-macro.patch  0004-check-if-rdomain-support-is-available.patch  0004-conditionally-fill-in-sin_len-sin6_len-if-they-exist.patch  0004-remove-unused-dns_pid.patch  0005-EAI_NODATA-does-not-exist-everywhere.patch  0005-Fix-DNS-timeout-lookup.patch  0005-Use-LOG_NTP-syslog-facility-if-it-is-available.patch  0005-be-more-verbose-when-logging-privsep-errors.patch  0005-check-if-rdomain-support-is-available.patch  0005-conditionally-fill-in-sin_len-sin6_len-if-they-exist.patch  0005-rename-the-s_un-socket-to-avoid-a-variable-called-su.patch  0005-update-ntpd.conf-to-indicate-OS-dependent-options.patch  0006-EAI_NODATA-does-not-exist-everywhere.patch  0006-Use-LOG_NTP-syslog-facility-if-it-is-available.patch  0006-allow-overriding-default-user-and-file-locations.patch  0006-be-more-verbose-when-logging-privsep-errors.patch  0006-conditionally-fill-in-sin_len-sin6_len-if-they-exist.patch  0006-do-not-allow-privsep-user-to-be-a-privileged-user.patch  0006-update-ntpd.conf-to-indicate-OS-dependent-options.patch  0007-Handle-IPv6-DNS-records-on-IPv4-networks-more-libera.patch  (+83 more)
src/: Makefile.am  constraint-disabled.c
